feat: 统一前端按钮样式为半透明青绿色风格
- 修改所有页面按钮为半透明背景+半透明边框风格
- 统一按钮悬停效果：背景加深+边框变亮+微上浮+阴影
- 修改下拉框样式为半透明毛玻璃效果
- 涉及页面：Home, Statistics, CodeAnalyzer, LearningCalendar,
  AdaptiveDetail, ProgressDetail, PlanningDetail, DiagnosisDetail,
  DiagnosisReport, WeaknessDetail, LearningPathList, LearningPathDetail,
  Knowledge, Assessment, Achievements, Profile, AiPanel, GoalSetting
- 删除不透明渐变背景，采用统一的 rgba(-indigo, 0.1) 风格